syntax = "proto3";

package greeter.v1;
option go_package = "github.com/alanchchen/go-project-skeleton/pkg/greeter/api";

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The greeter service definition.
service GreeterService {
    // Sends a greeting
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}